ログイン、サインアップビューの変更

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -222,6 +222,9 @@ div.contents.row {
   }
   .new_user{
   font-family: "游ゴシック", "YuGothic";
+    .left_side {
+      width: 3%;
+    }
   }
   div.content_post {
     @include boxBase(20px 0 ,30px);
