--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -2,6 +2,13 @@
   %h2 Sign up
   = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
     = devise_error_messages!
+    -#新規で追加箇所
+    .field
+      = f.label :nickname
+      %em (6 characters maximum)
+      %br/
+      = f.text_field :nickname, autofocus: true, maxlength: "6"
+    -#新規で追加箇所
     .field
       = f.label :email
       %br/
