--- a/app/views/tweets/show.html.haml
+++ b/app/views/tweets/show.html.haml
@@ -14,4 +14,14 @@
       = link_to "/users/#{@tweet.user.id}", html: "" do
         -# 『link_to(url, html_options = {}) do』を参照
         %span 投稿者
-        @tweet.user.nickname
+        =@tweet.user.nickname
+  .container
+    - if current_user
+      -# ログインしていれば下記表示可能
+      = form_tag "/tweets/8/commets", method: :post do
+        / = form_tag "/tweets/#{@tweet.id}/commets", method: :post do
+        -# = form_tag tweet_comments_path, method: :post
+        = label_tag :text, "コメント入力欄"
+        = text_area_tag :text, "", placeholder: "コメントする", cols: "30", rows: "2"
+        = submit_tag "SENT"
+
