--- a/app/views/tweets/show.html.haml
+++ b/app/views/tweets/show.html.haml
@@ -33,7 +33,7 @@
 
     / コメント表示欄
     .comments
-      %h4 コメント一覧
+      %h4 ＜コメント一覧＞
       - if @comments
         -# コメントがあれば下記表示可能
         - @comments.each do |comment|
