--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -6,12 +6,18 @@
     -# = @nickname
     -# さんの投稿一覧
   -@tweets.each do |tweet|
-    .content_post{style: "background-image: url(#{tweet.image});"}
-      = simple_format(tweet.text)
-      -#
-        %span.name
-          投稿者#{tweet.user.nickname}：不要カラム削除後に整理
-          （マイページに投稿者：自分を表示する必要がない為）
-      -# %span.name=tweet.name：アソシエーションを組む前の記述の仕方
+
+    = render partial: "tweets/tweet", locals: { tweet: tweet}
+    -# 違う階層内の部分テンプレートを呼びだすことも可能
+
+    -#
+      部分テンプレート使用前の記述内容
+      .content_post{style: "background-image: url(#{tweet.image});"}
+        = simple_format(tweet.text)
+        -#
+          %span.name
+            投稿者#{tweet.user.nickname}：不要カラム削除後に整理
+            （マイページに投稿者：自分を表示する必要がない為）
+        -# %span.name=tweet.name：アソシエーションを組む前の記述の仕方
 
   =paginate(@tweets)
