--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,4 +1,6 @@
 .contents.row
+  %p.content_left
+    = link_to "#{@nickname}さんのプロフィール", "/users/#{@user.id}/details/#{@user.detail.id}"
   %p
     -# 表示パターン１：テキスト内での式展開の仕方
     #{@nickname}さんの投稿一覧
