--- a/app/views/details/new.html.haml
+++ b/app/views/details/new.html.haml
@@ -1,25 +1,3 @@
 .contents.row
   .container
-    -# form_forメソッドで、コントローラで生成した空のインスタンス変数を引数にして呼び出す。
-    = form_for [@user, @detail] do |f|
-      / = form_for user_details_path do |f|
-      =f.label :body, "自己紹介文"
-      =f.text_area :body, cols: "30", rows: "10"
-
-      =f.label :gender, "性別"
-      =f.select :gender, Detail.genders.keys.to_a
-      -# モデルで定義したenumのkeyを表す
-
-      =f.label :birthday, "誕生日"
-      =f.date_select :birthday, start_year: 1980, end_year: Date.today.year, use_month_numbers: true, default: Time.now - 18.year
-      -# 『start_year』と『end_year』で選択可能な年度の範囲を指定。
-      -# 『use_month_numbers』で英語表記の月を日本語表記に。
-      -# 『default』で表示される日時を指定。
-
-      =f.label :hometown, "居住地", class: "try"
-      / 『forの値』,『html上の文章（テキスト）』,第３引数以降にクラス名などを追記可能？
-      =f.text_field :hometown
-
-      =f.submit "SENT"
-
-
+    = render partial: "form"
