profile画面における登録リンクの切り分け

--- a/app/views/details/profile.html.haml
+++ b/app/views/details/profile.html.haml
@@ -1,4 +1,5 @@
 .contents.row
   .success
     %h3 まだプロフィール詳細は登録されてません。
-    = link_to "プロフィール詳細を登録する", new_user_detail_path, class: "btn"
+    - if @user.detail.present?
+      = link_to "プロフィール詳細を登録する", new_user_detail_path, class: "btn"
