新規作成時の条件文修正＆showページのレイアウト整形

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -432,3 +432,13 @@ footer {
     }
   }
 }
+.contents.row {
+  .container {
+    h4 {
+      color: #57C3E9;
+    }
+    p {
+      color:#666;
+    }
+  }
+}
