details#showページ、postのrender化

--- a/app/views/details/show.html.haml
+++ b/app/views/details/show.html.haml
@@ -25,22 +25,4 @@
     .success
       = link_to "プロフィール詳細を編集する", "/users/#{@detail.user_id}/details/#{@detail.id}/edit", method: :get, class: "btn"
 
-  / コミュニケーション欄
-  .container
-    - if current_user
-      = form_tag "/users/#{@detail.user_id}/details/#{@detail.id}/posts", method: :post do
-        = label_tag :text, "コミュニケーション欄"
-        = text_area_tag :text, "", placeholder: "書き込む", cols: "30", rows: "2"
-        = submit_tag "SENT"
-
-    / 書き込み表示欄
-    .comments
-      %h4 ＜書き込み一覧＞
-      - if @posts
-        - @posts.each do |post|
-          %p
-            %strong
-              =link_to "#{post.user.nickname}", "/users/#{post.user_id}"
-              ：
-              =post.text
-
+  = render partial: "post"
