パスワード設定欄に注意事項を記載

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -17,6 +17,9 @@
       = f.email_field :email, autofocus: true, autocomplete: "email"
     .field
       = f.label :password
+      %em
+        (#{@minimum_password_length} characters minimum)
+      -#
       - if @validatable
         -#- if @minimum_password_length：初期記載
         %em
